@@ -4,7 +4,7 @@
 
 confdb.dbName=hltdb
 confdb.dbType=mysql
-confdb.dbHost=cmssrv0.cern.ch
+confdb.dbHost=cmssrv0
 confdb.dbUser=hlt
 confdb.dbPwrd=hlt
 
